<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="date_time_auto">Automatic date &amp; time</string>
    <string name="zone_auto">Automatic time zone</string>
    <string name="date_time_24hour">Use 24-hour format</string>
    <string name="date_time_set_time">Set Time</string>
    <string name="date_time_set_timezone">Select time zone</string>
    <string name="date_time_set_date">Set date</string>
    <string name="location_settings_title">Location</string>
    <string name="crypt_keeper_settings_title">Encryption</string>
    <string name="crypt_keeper_encrypt_title">Encrypt phone</string>
    <string name="unlock_set_unlock_launch_picker_title">Screen lock</string>
    <string name="unlock_set_unlock_mode_pattern">Pattern</string>
    <string name="device_admin_title">Device administration</string>
    <string name="manage_device_admin">Device administrators</string>
    <string name="wifi_tether_configure_ap_text">Configure Wi-Fi hotspot</string>
    <string name="sound_settings">Sounds</string>
    <string name="ringtone_summary">Silent</string>
    <string name="dtmf_tone_enable_title">Keypad touch tones</string>
    <string name="sound_effects_enable_title">Touch sound</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="screen_timeout_summary">%1$s</string>
    <string name="sim_lock_settings">SIM card lock settings</string>
    <string name="sim_lock_settings_title">SIM card lock</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_status_activity_title">Status</string>
    <string name="status_network_type">Mobile network type</string>
    <string name="status_data_state">Mobile network state</string>
    <string name="status_service_state">Service state</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="status_roaming">Roaming</string>
    <string name="status_operator">Network</string>
    <string name="usb_connection_category">Connect as</string>
    <string name="usb_mtp_title">Media devices (MTP)</string>
    <string name="usb_mtp_summary">You may save and access data simultaneously. For Windows XP, please first select USB storage, then install the vivo driver on your phone to your PC.</string>
    <string name="usb_ptp_title">Camera (PTP)</string>
    <string name="usb_ptp_summary">You can transfer photos using the camera software</string>
    <string name="master_clear_title">Factory data reset</string>
    <string name="tethering_help_button_text">Help</string>
    <string name="location_network_based">Use wireless network</string>
    <string name="location_gps">Use GPS satellite</string>
    <string name="lockpattern_settings_enable_visible_pattern_title">Pattern visible</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of non-Market apps</string>
    <string name="unknown">unknown</string>
    <string name="enable_adb">USB debugging</string>
    <string name="enable_adb_summary">Enable connecting phone with vivoAssistant</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="tts_default_rate_title">Speech rate</string>
    <string name="tts_default_rate_summary">Speed at which the text is spoken</string>
    <string name="tts_play_example_title">Listen to an example</string>
    <string name="tts_play_example_summary">Play a short demonstration of speech synthesis</string>
    <string name="tts_status_title">Default language status</string>
    <string name="tts_engine_preference_section_title">Preferred engine</string>
    <string name="tts_general_section_title">General</string>
    <string name="credentials_title">Credential storage</string>
    <string name="credentials_install">Install from phone storage and SD card</string>
    <string name="credentials_reset">Clear credentials</string>
    <string name="trusted_credentials">Trusted credentials</string>
    <string name="privacy_settings_title">Backup &amp; Reset</string>
    <string name="backup_section_title">Backup &amp; restore</string>
    <string name="backup_data_title">Back up my data</string>
    <string name="backup_data_summary">Back up app data, Wi-Fi passwords, and other settings to Google servers</string>
    <string name="backup_configure_account_title">Backup account</string>
    <string name="backup_configure_account_default_summary">No account is currently storing backed up data</string>
    <string name="auto_restore_title">Automatic restore</string>
    <string name="auto_restore_summary">After a certain application is reinstalled, the system will restore the settings and data from backup</string>
    <string name="keywords_sounds_and_notifications_interruptions">"do not disturb don't interrupt interruption break"</string>
    <string name="manage_notification_access_title">Notification access</string>
    <string name="switch_off_text">Off</string>
    <string name="screen_pinning_title">Screen pinning</string>
    <string name="date_time_date_format">Select date format</string>
    <string name="OneHand_title">One-handed</string>
    <string name="access_keyboard">Access one-handed keyboard</string>
    <string name="access_miniscreen">Access mini screen using gesture</string>
    <string name="agps_settings_eng_enable">A-GPS settings</string>
    <string name="ascending_ring">Ascending ringtone</string>
    <string name="auto_time_explain">You may be charged for data usage if you use Internet time and time zone when no Wi-Fi network is available.</string>
    <string name="auto_time_gps_title">Synchronize time with GPS satellite</string>
    <string name="category_tether_warning">Sharing mobile network may incur data charges, and you cannot use Wi-Fi connection while sharing through Wi-Fi.</string>
    <string name="clean_mode">Visitor password</string>
    <string name="clear_all_data">Erase all data</string>
    <string name="contacts">Protect contacts</string>
    <string name="date_time_zone_auto">Auto</string>
    <string name="dial_pad">Keypad</string>
    <string name="dual_spkr">Two speakers</string>
    <string name="dual_spkr_exp">Turning off Dual-speaker can save battery life, and only one speaker will be used for output with this option turned off.</string>
    <string name="enable_vivo_assistant_summary">Please follow the instructions on your computer</string>
    <string name="enable_vivo_assistant_title">Install vivoAssistant</string>
    <string name="eyeprint_tite">Eye ID</string>
    <string name="fingerprint_null">None</string>
    <string name="fingerprint_visit">Visitor mode is connected to fingerprint</string>
    <string name="gesture_settings">Gesture settings</string>
    <string name="gps_location_instruction">GPS consumes battery and may incur data traffic charges; therefore, it is recommended to turn off GPS when it is not in use.</string>
    <string name="hide_apps">Hide icon</string>
    <string name="hide_info">In visitor mode, the address book, messages and call logs of selected contacts will be hidden. After the protect albums &amp; video function is activated, the albums &amp; videos will be hidden.</string>
    <string name="hide_type">Scope of protection</string>
    <string name="hifi_settings">Hi-Fi</string>
    <string name="thai_calendar">Use Buddhist Calendar</string>
    <string name="key_info">Enter the visitor password on the lock-screen interface, your phone will enter visitor mode.</string>
    <string name="key_vibrate_state">Touch feedback</string>
    <string name="key_vibrate_state_summary">You will receive vibration feedbacks when tapping the bottom buttons and operating some functions</string>
    <string name="location_permission_title">Access location:</string>
    <string name="message_sent_sound">Message sent sound</string>
    <string name="miniscreen_info">To access the mini screen, slide the screen from the outside to center and then slide back</string>
    <string name="onehand_keyboard">One-handed keyboard</string>
    <string name="onehand_summary">The keyboard or pattern will be shrink when you slide from the outer edges of the screen</string>
    <string name="pic_use_gps">GPS for photos</string>
    <string name="pic_use_gps_explain">After the service is activated, photo location data will be acquired when taking photos.</string>
    <string name="pick_ringtone">No ringtone,Please select</string>
    <string name="picture">Protect albums and videos</string>
    <string name="pin_lock">Screen lock PIN / pattern</string>
    <string name="resume_all_set">Reset all settings</string>
    <string name="ring_vol_change_by_keys">Volume key adjustment</string>
    <string name="ringtone_messages_title">Message ringtone</string>
    <string name="ringtone_notification_title">Notification ringtone</string>
    <string name="ringtone_phone_title">Call ringtone</string>
    <string name="security_privacy">Security &amp; Privacy</string>
    <string name="silent_mode_title">Silent</string>
    <string name="tether_share_pc_network">Share PC network</string>
    <string name="tether_share_phone_via_bluetooth">Share phone network via Bluetooth</string>
    <string name="tether_share_phone_via_usb">Share phone network via USB</string>
    <string name="tether_share_phone_via_wlan">Wi-Fi Hotspot</string>
    <string name="tethering_ipv4_ipv6">Enable IPV6</string>
    <string name="title_srs_max_v">SRS Max-V</string>
    <string name="title_srs_max_v_explain">Increase ringtone volume for incoming calls and maximize volume of music playing</string>
    <string name="unsettings">None</string>
    <string name="usb_charge_title">Charge only</string>
    <string name="usb_mtp_driver">MTP Help: For Windows XP, drives need to be installed. Please open My Computer and go to the vivo CD Drive to install vivo Phone Assistant and drivers. For Mac OS, please run the AndroidFileTransfer.dmg file, and if the file is with problems, please download its latest version at http://www.android.com.filetransfer.</string>
    <string name="usb_settings_no_popup">No longer pop up</string>
    <string name="usb_sharing_title">Share PC network via USB</string>
    <string name="usb_tethering_select_version">Choose PC OS</string>
    <string name="usb_ums_summary">Use the phone as a USB drive</string>
    <string name="usb_ums_title">USB drive function</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="visitKey">Visitor password</string>
    <string name="visit_help">Instructions</string>
    <string name="visit_info">Instructions for visitor mode</string>
    <string name="visit_title">Visitor mode</string>
    <string name="vivo_keyboard">vivo input method keyboard</string>
    <string name="vivo_keyboard_summary">landscape keyboard not included</string>
    <string name="vivo_sound">Super Audio</string>
    <string name="zen_mode_title">Do not disturb</string>
    <string name="title_speaker_boost">Speaker Boost</string>
    <string name="title_speaker_boost_explain">Increase ringtone volume for incoming calls and maximize volume of music playing</string>
    <string name="ktv_title">King of karaoke</string>
    <string name="resume_all_set_summary">Reset all settings, no data or media will be deleted</string>
    <string name="clear_all_data_summary">Clear all data on your phone</string>
    <string name="verify_applications">Verify application</string>
    <string name="verify_applications_summary">Do not install applications, which might be harmful or prompt before installation</string>
</resources>