<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/device_status_activity_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/status_operator" android:key="operator_name" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_signal_strength" android:key="signal_strength" android:summary="@string/device_info_not_available" style="@style/BbkInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_network_type" android:key="network_type" android:summary="@string/unknown" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_service_state" android:key="service_state" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_roaming" android:key="roaming_state" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_data_state" android:key="data_state" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
</PreferenceScreen>